--- a/css/main.css
+++ b/css/main.css
@@ -391,42 +391,23 @@ li{
  .dotdotdot{
    margin-bottom:50px;
  }
-  .page-1{
+  .page-1, .page-2, .page-3, .page-4, .page-5{
     height: 60rem;
   }
-  .page-2{
-    height: 60rem;
-  }
-  .page-2-title-h1{
+
+  .page-2-title-h1, .page-3-title-h1{
     font-size:3rem;
     margin-top: 5rem;
   }
-  .page-2-p{
+  .page-2-p, .page-3-p{
     font-size: 1.5rem;
     margin: 5rem 0 3rem 0;
   }
   .orange-page-2{
     margin: 5rem 0 5rem 0;
   }
-  .page-3{
-    height: 60rem;
-  }
-  .page-3-title-h1{
-    font-size:3rem;
-    margin-top: 5rem;
-  }
-  .page-3-p{
-    font-size: 1.5rem;
-    margin: 5rem 0 3rem 0;
-  }
   .orange-page-3{
     margin: 2rem 0 2rem 0;
-  }
-  .page-4{
-    height: 60rem;
-  }
-  .page-5{
-    height: 60rem;
   }
 
 
