--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 }
 
 body{
+  background-color: #2b2d42;
   font-family: "Roboto";
   font-weight: 300;
   color: black;
@@ -171,8 +172,7 @@ body{
 .page-4 {
   padding: 35px 0;
   width: 100%;
-  background-image: url("../img/doorblur.jpg");
-  background-image: center;
+  background-color: lightcoral;
   height: 45rem;
   display: flex;
   flex-direction: column;
@@ -403,11 +403,8 @@ li{
     font-size: 1.5rem;
     margin: 5rem 0 3rem 0;
   }
-  .orange-page-2{
+  .orange-page-2, .orange-page-3{
     margin: 5rem 0 5rem 0;
-  }
-  .orange-page-3{
-    margin: 2rem 0 2rem 0;
   }
 
 
