--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 
 body{
-  background-color: #2b2d42;
+  background-color: #212121;
   font-family: "Roboto";
   font-weight: 300;
   color: black;
