--- a/css/main.css
+++ b/css/main.css
@@ -391,58 +391,62 @@ li{
     width: 40% !important;
     background-color: #fafafa;
   }
- .dotdotdot{
+  .dotdotdot{
    margin-bottom:50px;
  }
-  .page-1, .page-2, .page-3, .page-4, .page-5{
-    height: 60rem;
-  }
-
-  .page-2-title-h1, .page-3-title-h1{
-    font-size:3rem;
-    margin-top: 5rem;
-  }
-  .page-2-p, .page-3-p{
-    font-size: 1.5rem;
-    margin: 5rem 0 3rem 0;
-  }
-  .orange-page-2, .orange-page-3{
-    margin: 5rem 0 5rem 0;
-  }
-
-  .orange-page-3{
-    margin: 2rem 0 2rem 0;
-  }
-
+ .page-1, .page-2, .page-3, .page-4, .page-5{
+  height: 60rem;
 }
 
+.page-2-title-h1, .page-3-title-h1{
+  font-size:3rem;
+  margin-top: 5rem;
+}
+.page-2-p, .page-3-p{
+  font-size: 1.5rem;
+  margin: 5rem 0 3rem 0;
+}
+.orange-page-2, .orange-page-3{
+  margin: 5rem 0 5rem 0;
+}
 
-  /*iPad media query*/
-  @media (min-width: 768px){
-    /* STYLES GO HERE */
-    .page-1-div {
-      position: relative;
-      top:120px;
-      width: 80%;
-      height: 80%;
-      background-color: rgba(0,0,0,0.3);
-      margin: 0 auto;
-      margin-top: 0rem;
-      border: 1px solid #b5b5b5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+.orange-page-3{
+  margin: 2rem 0 2rem 0;
+}
 .projectImg{
-  width:auto;
+    width:auto;
+  }
+
 }
 
-/*Orange Dividers*/
-.orange-page-1 {
+
+/*iPad media query*/
+@media (min-width: 768px) and (max-width: 1366px){
+  /* STYLES GO HERE */
+  .page-1-div {
+    position: relative;
+    top:120px;
+    width: 80%;
+    height: 80%;
+    background-color: rgba(0,0,0,0.3);
+    margin: 0 auto;
+    margin-top: 0rem;
+    border: 1px solid #b5b5b5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+.projectImg{
+    width:auto;
+  }
+
+
+  /*Orange Dividers*/
+  .orange-page-1 {
     margin: 10rem 0 0 0;
-}
-/*first buttons*/
-.btn-page-1 {
+  }
+  /*first buttons*/
+  .btn-page-1 {
     padding: 6px 12px;
     border: 2px solid #b5b5b5;
     background-color: rgba(0,0,0,0.0);
@@ -450,15 +454,16 @@ li{
     font-size: 1em;
     color: white;
     text-decoration: none;
-}
+  }
 
-    .page-1-title-h1 {
-      color: white;
-      font-family: "Roboto";
-      font-weight: 300;
-      font-size: 2em;
-      text-align: center;
-      margin-top: 3rem;
-      padding: 0 0.3em 0 0.3em;
-    }
+  .page-1-title-h1 {
+    color: white;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 2em;
+    text-align: center;
+    margin-top: 3rem;
+    padding: 0 0.3em 0 0.3em;
+  }
+  
   }
