--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,13 @@
   padding: 0;
   margin: 0;
 }
-
-body{
+.bg-color{
+  z-index: -10;
   background-color: #212121;
+  width: 100%;
+  height: 100%; 
+}
+body{
   font-family: "Roboto";
   font-weight: 300;
   color: black;
