--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
+section{
+  background-color: #fafafa;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -481,6 +485,8 @@ li{
   margin-top: 5rem;
   padding: 0 0.3em 0 0.3em;
 }
-  
-  }
+section{
+background-color: #fafafa;
+} 
+}
 
