ipad query page-2 img

--- a/css/main.css
+++ b/css/main.css
@@ -487,41 +487,12 @@ li{
 }
 
 /*SECTION 2*/
+
 .page-2 img {
   width: 100%;
-  padding: 0 1em;
+  padding: 0 10%;
 }
-.page-2-title-h1 {
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 1.5rem;
-  text-align: center;
-  margin-top: 3rem;
-  padding: 0 1em;
-}
-.orange-page-2 {
-  width: 6rem;
-  height: 0.2rem;
-  background-color: #f26522;
-  margin: 0 auto;
-  margin: 2rem 0 2rem 0;
-}
-.page-2-p {
-  margin: 2rem 0 0 0;
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 1.2rem;
-  text-align: center;
-  padding: 0 5em 0 5em;
-}
-.btn-page-2 {
-  padding: 6px 15px;
-  border: 2px solid #000000;
-  background-color: rgba(0,0,0,0.0);
-  margin: 1rem 0 0 0;
-  color: black;
-  text-decoration: none;
-}
+
 
 /*SECTION 3*/
 
