--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ section{
   padding: 0;
   margin: 0;
 
+
 }
 .bg-color{
   z-index:-10;
@@ -19,6 +20,8 @@ body{
   font-family: "Roboto";
   font-weight: 300;
   color: black;
+  background:black;
+
 }
 /*h1 on page-1*/
 .page-1-title-h1 {
@@ -529,4 +532,3 @@ li{
     width:auto;
   }
 }
-
