--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ body{
   margin-top: 3rem;
   padding: 0 1em;
 }
-.orange-page-2 {
+.orange-page-2, .orange-page-3{
   width: 6rem;
   height: 0.2rem;
   background-color: #f26522;
@@ -129,13 +129,6 @@ body{
   font-size: 1.5rem;
   text-align: center;
 }
-.orange-page-3 {
-  width: 6rem;
-  height: 0.2rem;
-  background-color: #f26522;
-  margin: 0 auto;
-  margin: 2rem 0 2rem 0;
-}
 .page-3-flex-container {
   width: 100%;
   min-height: 50%;
@@ -170,8 +163,8 @@ body{
   padding: 0 1em 0 1em;
 }
 .projectImg{
- width:100%;
-}
+   width:100%;
+ }
 .btn-page-3 {
   padding: 6px 15px;
   border: 2px solid #000000;
@@ -425,36 +418,17 @@ li{
   font-size:3rem;
   margin-top: 5rem;
 }
-.page-2-p, .page-3-p{
-  font-size: 1.5rem;
-  margin: 5rem 0 3rem 0;
-}
-.orange-page-2, .orange-page-3{
-  margin: 5rem 0 5rem 0;
-}
 
-.orange-page-3{
-  margin: 2rem 0 2rem 0;
-}
 .projectImg{
-  width:auto;
-}
-
-
-.orange-page-3{
-  margin: 2rem 0 2rem 0;
-}
+    width:auto;
+  }
 }
 
 
 /*iPad media query*/
 @media (min-width: 768px) and (max-width: 1366px){
 
-  section{
-    background-color: #fafafa;
-  }
-
-  /*SECTION 1*/
+  /* STYLES GO HERE */
   .page-1-div {
     position: relative;
     top:120px;
@@ -468,7 +442,11 @@ li{
     flex-direction: column;
     align-items: center;
   }
- 
+.projectImg{
+    width:auto;
+  }
+
+
   /*Orange Dividers*/
   .orange-page-1 {
    width: 8rem;
@@ -485,48 +463,8 @@ li{
   margin-top: 5rem;
   padding: 0 0.3em 0 0.3em;
 }
-
-/*SECTION 2*/
-.page-2 img {
-  width: 100%;
-  padding: 0 1em;
-}
-.page-2-title-h1 {
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 1.5rem;
-  text-align: center;
-  margin-top: 3rem;
-  padding: 0 1em;
-}
-.orange-page-2 {
-  width: 6rem;
-  height: 0.2rem;
-  background-color: #f26522;
-  margin: 0 auto;
-  margin: 2rem 0 2rem 0;
-}
-.page-2-p {
-  margin: 2rem 0 0 0;
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 1.2rem;
-  text-align: center;
-  padding: 0 5em 0 5em;
-}
-.btn-page-2 {
-  padding: 6px 15px;
-  border: 2px solid #000000;
-  background-color: rgba(0,0,0,0.0);
-  margin: 1rem 0 0 0;
-  color: black;
-  text-decoration: none;
-}
-
-/*SECTION 3*/
-
- .projectImg{
-    width:auto;
-  }
+section{
+background-color: #fafafa;
+} 
 }
 
