page-2 margins complete

--- a/css/main.css
+++ b/css/main.css
@@ -474,6 +474,14 @@ background-color: #fafafa;
   padding: 0 10%;
 }
 
+.page-2-p {
+  margin: 3rem 0 0 0;
+  
+}
+.btn-page-2 {
+  margin: 2.5rem 0 0 0;
+}
+
 
 /*SECTION 3*/
 
