--- a/css/navbar.css
+++ b/css/navbar.css
@@ -30,9 +30,11 @@
 
 
 .menuDropdown{
+  position:relative;
   list-style:none;
   color:white;
   padding-bottom:1.5rem;
+
   
 }
 .box{
@@ -41,6 +43,7 @@
   height:260px;
   transform:translate(0px,0px);
   transition:all 1s ease 0s;  
+
  
 
 
