--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
 section{
   background-color: #fafafa;
+
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  
 }
 .bg-color{
-  z-index:-10;
+  position: relative ;
+  z-index:2;
   background-color: #2b2d42;
   width: 100%;
   height: 100%; 
