--- a/css/main.css
+++ b/css/main.css
@@ -349,18 +349,20 @@ li{
     margin: 0 auto;
     width: 70% !important;
     background-color: #fafafa;
-
   }
   nav{
     margin: 0 auto;
     width: 70% !important;
+  }
+  .contact, .txt-style{
+    width: 50%;
   }
   .page-1-div{
     width: 80%;
     height: 80%;
   }
   .page-2 img {
-    width: auto;
+     width: auto;
     height: auto;
   }
   .textContainer{
@@ -371,12 +373,10 @@ li{
   .dotdotdot{
    margin-bottom:50px;
  }
- .page-1, .page-2, .page-3, .page-4, .page-5{
+.page-1, .page-2, .page-3, .page-4, .page-5{
   height: 60rem;
 }
-
-
-.page-2-title-h1, .page-3-title-h1{
+.page-2-title-h1, .page-3-title-h1, .page-5-title-h1{
   font-size:3rem;
   margin-top: 5rem;
 }
@@ -384,16 +384,13 @@ li{
   font-size: 1.5rem;
   margin: 5rem 0 3rem 0;
 }
-.orange-page-2, .orange-page-3{
+.page-5-p{
+  font-size: 1.5rem;
+  margin: 0 5rem 3rem 5rem;
+}
+.orange-page-2, .orange-page-3, .orange-page-5{
   margin: 5rem 0 5rem 0;
 }
-
-
-.page-2-title-h1, .page-3-title-h1{
-  font-size:3rem;
-  margin-top: 5rem;
-}
-
 .projectImg{
     width:auto;
   }
