--- a/css/main.css
+++ b/css/main.css
@@ -99,13 +99,13 @@ body{
   margin: 0 auto;
   margin: 2rem 0 2rem 0;
 }
-.page-2-p {
+.page-2-p, .page-3-p, .page-5-p{
   margin: 2rem 0 0 0;
   font-family: "Roboto";
   font-weight: 300;
   font-size: 1.2rem;
   text-align: center;
-  padding: 0 3.5em 0 3.5em;
+  padding: 0 1.5rem 0 1.5rem;
 }
 .btn-page-2 {
   padding: 6px 15px;
@@ -130,15 +130,6 @@ body{
   font-weight: 300;
   font-size: 1.5rem;
   text-align: center;
-}
-
-.page-3-p {
-  margin: 2rem 0 0 0;
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 1.2rem;
-  text-align: center;
-  padding: 0 1em 0 1em;
 }
 .projectImg{
    width:100%;
@@ -218,16 +209,7 @@ body{
   height: 0.2rem;
   background-color: #f26522;
   margin: 0 auto;
-  margin: 2rem 0 2rem 0;
-}
-.page-5-p {
-  margin: 1rem 0 1rem 0;
-  font-family: "Roboto";
-  font-weight: 300;
-  text-align: center;
-  font-size: 1.2rem;
-  padding: 0 1em 0 1em;
-
+  margin: 2rem 0 0 0;
 }
 form {
   width: 100%;
@@ -239,11 +221,12 @@ form {
   width: 80%;
   height: 2rem;
   border: 1px solid #242424;
-  margin: 0 0 2rem 0;
+  margin: 2rem 0 0 0;
   padding-left:5px;
 
 }
 .txt-style {
+  margin-top: 2rem;
   width: 80%;
   max-width: 80%;
   height:200px;
