Desktop margin-top page-1 elements

--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,19 @@ li{
     width: 80%;
     height: 80%;
   }
+
+  /*h1 on page-1*/
+.page-1-title-h1 {
+  margin-top: 10rem;
+}
+  /*Orange Dividers*/
+.orange-page-1 {
+  margin: 10rem 0 0 0;
+}
+/*first buttons*/
+.btn-page-1 {
+  margin: 10rem 0 0 0;
+}
   .page-2 img {
      width: auto;
     height: auto;
