responsive.html img

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -49,7 +49,7 @@
 	<section class="page-2">
 		<h1 class="page-2-title-h1">XLNT Media skapar lösningar för alla format</h1>
 		<div class="orange-page-2"></div>
-		<img src="../img/responsive-phone.png">
+		<img src="../img/responsive-web-design.png">
 		<p class="page-2-p">
 			"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
 		</p>
