--- a/views/team.html
+++ b/views/team.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
 </head>
 <body>
+<div class="bg-color">
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
@@ -42,7 +43,8 @@
 			</ul>
 		</div>
 	</nav>
-	<br><br>
+	
+	<section class="team">
 	<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
 	<center><div class="orange-page-1"></div></center><br><br>
 	<div class="slideshow-container">
@@ -73,7 +75,7 @@
 		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 		<a class="next" onclick="plusSlides(1)">&#10095;</a>
 	</div>
-	<br>
+	
 
 	<div class="dotdotdot" style="text-align:center">
 		<span class="dot" onclick="currentSlide(1)"></span> 
@@ -104,8 +106,8 @@
 			</div></li>
 		</ul>
 	</div>
-
-	<br><br>
+</section>
+	
 	<footer>
 		<h2>Adress</h2>
 		<p>Sjumilaskogen 7</p>
