--- a/views/projects.html
+++ b/views/projects.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/hamburger.css">
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
 	<title>XLNT</title>
@@ -34,7 +33,7 @@
 				</div>
 				<div>
 					<a class="other-site-nav" href="../index.html#responsiv"><li class="menuDropdown">Responsiv design</li></a> 
-				</div>
+					</div>
 				<div>
 					<a class="other-site-nav" href="../index.html#tidigare"><li class="menuDropdown">Tidigare projekt</li></a>
 				</div>
@@ -52,10 +51,10 @@
 		<h1 class="page-3-title-h1">YET AGAIN EDDIE IS THE BEST AROUND!</h1>
 		<div class="orange-page-3"></div>
 		<div class="page-3-flex-container">
-			<figure class="flex-item">INSERT PICS</figure>
-			<figure class="flex-item">INSERT PICS</figure>
-			<figure class="flex-item">INSERT PICS</figure>
-			<figure class="flex-item">INSERT PICS</figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
 		</div>
 		<p class="page-3-p">
 			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
