--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ body{
 .page-4 {
   padding: 35px 0;
   width: 100%;
-  background-color: lightcoral;
+  background-color:#fafafa ;
   height: 45rem;
   display: flex;
   flex-direction: column;
@@ -169,7 +169,7 @@ body{
 }
 .p-div {
   width: 85%;
-  height: 50%;
+  height: 70%;
   background-color: rgba(0,0,0,0.3);
   margin: 0 auto;
   margin-top: 2rem;
@@ -187,12 +187,13 @@ body{
   border: 2px solid #b5b5b5;
   background-color: rgba(0,0,0,0.0);
   margin: 1rem 0 0 0;
-  color: white;
+  color: black;
   text-decoration: none;
 }
 /*fith section*/
 .page-5 {
   padding: 35px 0;
+  background-color:#f2f2f2;
   width: 100%;
   height: 45rem;
   display: flex;
@@ -226,6 +227,13 @@ form {
   padding-left:5px;
 
 }
+
+.teamPic{
+  margin:0px auto;
+  width:100%;
+
+}
+
 .txt-style {
   margin-top: 2rem;
   width: 80%;
@@ -500,3 +508,4 @@ form {
 .team {
   padding-top:2rem;
 }
+
