--- a/css/main.css
+++ b/css/main.css
@@ -330,8 +330,8 @@ li{
   padding: 1.5rem;
 }
 .flex-img{
-  width: 150px;
-  height: 150px;
+  width: 13rem;
+  height: 8rem;
 }
 .flex-img img{
   width: 100%; 
