--- a/views/projects.html
+++ b/views/projects.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
+	<link rel="stylesheet" type="text/css" href="../css/project.css">
 	<title>XLNT</title>
 </head>
 
@@ -51,10 +52,10 @@
 		<h1 class="page-3-title-h1">YET AGAIN EDDIE IS THE BEST AROUND!</h1>
 		<div class="orange-page-3"></div>
 		<div class="page-3-flex-container">
-			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
-			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
-			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
-			<figure class="flex-img"><img src="../img/youtube.png"><h1>Youtube</h1></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><p class="project-p">Youtube</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><p class="project-p">Youtube</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><p class="project-p">Youtube</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><p class="project-p">Youtube</p></figure>
 		</div>
 		<p class="page-3-p">
 			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
