--- a/css/project.css
+++ b/css/project.css
@@ -6,6 +6,15 @@
     text-align: center;
     padding: 0 1.5rem 0 1.5rem;
 }
+.project-p{
+	margin: 0 0 0 0;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-style: italic;
+	font-size: 1rem;
+    text-align: center;
+    padding: 0 1.5rem 0 1.5rem;
+}
 .flex-img{
   width: 13rem;
 }
