--- a/views/projects.html
+++ b/views/projects.html
@@ -52,10 +52,10 @@
 		<h1 class="page-3-title-h1">Projekt vi har jobbat på!</h1>
 		<div class="orange-page-3"></div>
 		<div class="page-3-flex-container">
-			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1></figure>
-			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1></figure>
-			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1></figure>
-			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">""</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">""</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">""</p></figure>
 		</div>
 		<p class="page-3-p">
 			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
