--- a/css/project.css
+++ b/css/project.css
@@ -1,5 +1,5 @@
 .project-h1{
-	margin: 0 0 0 0;
+	margin: 1rem 0 0 0;
     font-family: "Roboto";
     font-weight: 300;
 	font-size: 1.5rem;
@@ -7,7 +7,7 @@
     padding: 0 1.5rem 0 1.5rem;
 }
 .project-p{
-	margin: 0 0 0 0;
+	margin: 1rem 0 1rem 0;
     font-family: "Roboto";
     font-weight: 300;
     font-style: italic;
@@ -22,9 +22,14 @@
   width: 100%; 
 }
 .page-3-flex-container{
-  width: 100%;
-  height: 100%;
+  margin: 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content:space-around;
+}
+.page-3{
+	height: 100%;
+}
+.page-3-title-h1{
+	margin-top: 3rem;
 }
