--- a/css/project.css
+++ b/css/project.css
@@ -27,9 +27,31 @@
   flex-direction: column;
   justify-content:space-around;
 }
+.page-3-flex-container2{
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+}
 .page-3{
 	height: 100%;
 }
 .page-3-title-h1{
 	margin-top: 3rem;
+}
+@media(min-width: 1366px){
+.page-3-flex-container{
+  flex-direction: row;
+  width: 100%;
+}
+}
+@media (min-width: 768px) and (max-width: 1366px){
+.page-3-flex-container{
+  flex-direction: row;
+  width: 100%;
+}
+.page-3-flex-container2{
+  flex-direction: row;
+  width: 100%;
+}
 }
