--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
 .project-h1{
 	margin: 1rem 0 0 0;
     font-family: "Roboto";
-    font-weight: 300;
+    font-weight: 400;
 	font-size: 1.5rem;
     text-align: center;
     padding: 0 1.5rem 0 1.5rem;
@@ -40,9 +40,24 @@
 	margin-top: 3rem;
 }
 @media(min-width: 1366px){
+.flex-img{
+	width: 16rem;
+}
+.project-h1{
+	font-size: 2rem;
+}
+.project-p{
+	font-size: 1.5rem;
+}
 .page-3-flex-container{
   flex-direction: row;
   width: 100%;
+  padding: 0 6rem;
+}
+.page-3-flex-container2{
+  flex-direction: row;
+  width: 100%;
+  padding: 0 6rem;
 }
 }
 @media (min-width: 768px) and (max-width: 1366px){
