responsive.html + sass/css almost done

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -46,14 +46,13 @@
 			</ul>
 		</div>
 	</nav>
-	<section class="page-2">
-		<h1 class="page-2-title-h1">XLNT Media skapar lösningar för alla format</h1>
-		<div class="orange-page-2"></div>
-		<img src="../img/responsive-web-design.png">
-		<p class="page-2-p">
-			"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-		</p>
-		<!-- <a href="#" class="btn-page-2">Läs mer</a> -->
+	<section class="responsive">
+		<h1>Responsivt direktiv!</h1>
+		<div></div>
+		<p>
+		     Vi på XLNT Media vet hur viktigt det är att kunna komma åt information över allt, hur som helst med vad som helst. Så när vi skapar webbprojekt så ser vi alltid till att tillgängligheten och användarvänligheten är maximerad oberoende vilket medium man använder.
+			</p>
+		<img src="../img/content-water.jpg">
 	</section>
 	<footer>
 		<h2>Adress</h2>
