--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,48 +1,109 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500");
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 /*second section*/
-.page-2 {
+.responsive {
   width: 100%;
   height: 45rem;
   padding: 35px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #6293ba;
 }
-.page-2 img {
-  width: 100%;
-}
-
-.page-2-title-h1 {
+.responsive h1 {
   font-family: "Roboto";
   font-weight: 300;
   font-size: 1.5rem;
   text-align: center;
   margin-top: 3rem;
 }
-
-.orange-page-2 {
+.responsive div {
   width: 6rem;
   height: 0.2rem;
   background-color: #f26522;
   margin: 0 auto;
   margin: 2rem 0 2rem 0;
 }
-
-.page-2-p {
+.responsive p {
   font-family: "Roboto";
   font-weight: 300;
-  font-size: 1.5rem;
-  margin: 2rem 0 0 0;
+  font-size: 1rem;
+  margin: 1rem 0 0 0;
   text-align: center;
-  padding: 0 1em 0 1em;
+  padding: 0 1rem;
+}
+.responsive img {
+  margin: 2rem 0 0 0;
+  width: 80%;
 }
 
-.btn-page-2 {
-  padding: 6px 15px;
-  border: 2px solid #000000;
-  background-color: transparent;
-  margin: 1rem 0 0 0;
-  color: black;
-  text-decoration: none;
+/*iPad media query*/
+@media (min-width: 768px) and (max-width: 1366px) {
+  .responsive {
+    width: 100%;
+    height: 45rem;
+    padding: 35px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: teal;
+  }
+  .responsive div {
+    width: 6rem;
+    height: 0.2rem;
+    background-color: #f26522;
+    margin: 0 auto;
+    margin: 2rem 0 2rem 0;
+  }
+  .responsive p {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1rem;
+    margin: 2rem 0 0 0;
+    text-align: center;
+    padding: 0 4rem;
+  }
+  .responsive img {
+    margin: 2rem 0 0 0;
+    width: 50%;
+  }
+}
+/*Desktop media query*/
+@media (min-width: 1367px) {
+  .responsive {
+    width: 100%;
+    height: 70rem;
+    padding: 35px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: teal;
+  }
+  .responsive div {
+    width: 6rem;
+    height: 0.2rem;
+    background-color: #f26522;
+    margin: 0 auto;
+    margin: 2rem 0 2rem 0;
+  }
+  .responsive p {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1rem;
+    margin: 6rem 0 0 0;
+    text-align: center;
+    padding: 0 4rem;
+  }
+  .responsive img {
+    margin: 2rem 0 0 0;
+    width: 300px;
+    height: 300px;
+  }
 }
 
 /*# sourceMappingURL=responsive.css.map */
