--- a/scss/responsive-sass.scss
+++ b/scss/responsive-sass.scss
@@ -1,50 +1,122 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
 @mixin flex-center() {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-@mixin font-stuff() {
+@mixin font-stuff-h1() {
 	font-family: "Roboto";
     font-weight: 300;
     font-size: 1.5rem;
 }
 
+@mixin font-stuff-p() {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1rem;
+}
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 /*second section*/
-.page-2 {
+.responsive {
 	width: 100%;
 	height: 45rem;
 	padding: 35px 0;
 	@include flex-center;
+    background-color: #6293ba;
 
-	img {
-		width: 100%;
-	}
+    h1 {
+        @include font-stuff-h1;
+        text-align: center;
+        margin-top: 3rem;
+    }
+
+    div {
+        width: 6rem;
+        height: 0.2rem;
+        background-color: #f26522;
+        margin: 0 auto;
+        margin: 2rem 0 2rem 0;
+    }
+
+    p {
+        @include font-stuff-p;
+        margin: 1rem 0 0 0;
+        text-align: center;
+        padding: 0 1rem;
+    }
+
+    img {
+        margin: 2rem 0 0 0;
+        width: 80%;
+    }
+
 }
 
-.page-2-title-h1 {
-    @include font-stuff;
-    text-align: center;
-    margin-top: 3rem;
+/*iPad media query*/
+@media (min-width: 768px) and (max-width: 1366px) {
+
+    .responsive {
+        width: 100%;
+        height: 45rem;
+        padding: 35px 0;
+        @include flex-center;
+        background-color: teal;
+
+        div {
+            width: 6rem;
+            height: 0.2rem;
+            background-color: #f26522;
+            margin: 0 auto;
+            margin: 2rem 0 2rem 0;
+        }
+
+        p {
+            @include font-stuff-p;
+            margin: 2rem 0 0 0;
+            text-align: center;
+            padding: 0 4rem;
+        }
+        img {
+            margin: 2rem 0 0 0;
+            width: 50%;
+        }
+    }
 }
-.orange-page-2 {
-    width: 6rem;
-    height: 0.2rem;
-    background-color: #f26522;
-    margin: 0 auto;
-    margin: 2rem 0 2rem 0;
+
+/*Desktop media query*/
+@media (min-width:1367px){
+  .responsive {
+    width: 100%;
+    height: 70rem;
+    padding: 35px 0;
+    @include flex-center;
+    background-color: teal;
+
+    div {
+        width: 6rem;
+        height: 0.2rem;
+        background-color: #f26522;
+        margin: 0 auto;
+        margin: 2rem 0 2rem 0;
+    }
+
+    p {
+        @include font-stuff-p;
+        margin: 6rem 0 0 0;
+        text-align: center;
+        padding: 0 4rem;
+    }
+    img {
+        margin: 2rem 0 0 0;
+        width: 300px;
+        height: 300px;
+    }
+ }
 }
-.page-2-p {
-	@include font-stuff;
-    margin: 2rem 0 0 0;
-    text-align: center;
-    padding: 0 1em 0 1em;
-}
-.btn-page-2 {
-    padding: 6px 15px;
-    border: 2px solid #000000;
-    background-color: rgba(0,0,0,0.0);
-    margin: 1rem 0 0 0;
-    color: black;
-    text-decoration: none;
-}
+
