--- a/css/responsive.css
+++ b/css/responsive.css
@@ -92,14 +92,14 @@
     font-family: "Roboto";
     font-weight: 300;
     font-size: 1rem;
-    margin: 6rem 0 0 0;
+    margin: 4rem 0 0 0;
     text-align: center;
     padding: 0 4rem;
   }
   .responsive img {
     margin: 2rem 0 0 0;
-    width: 600px;
-    height: 600px;
+    width: 30rem;
+    height: 20rem;
   }
 }
 
