--- a/views/responsive.html
+++ b/views/responsive.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/responsive.css">
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
 	<title>XLNT</title>
 </head>
-
 <body>
 	<nav class="navbar">
 		<ul class="flex-box">
@@ -46,7 +46,7 @@
 			</ul>
 		</div>
 	</nav>
-	<section class="responsive">
+	<section class="responsive page-3">
 		<h1>Responsivt direktiv!</h1>
 		<div></div>
 		<p>
