added alt= to img tags on index and responsive.html

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -15,7 +15,7 @@
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
-				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png"></a>
+				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 			</li>
 			<li class="hamburger-position" align="right">
 				<div id="nav-icon" align="right" onclick="buttonpress()">
@@ -52,7 +52,7 @@
 		<p>
 		     Vi på XLNT Media vet hur viktigt det är att kunna komma åt information över allt, hur som helst med vad som helst. Så när vi skapar webbprojekt så ser vi alltid till att tillgängligheten och användarvänligheten är maximerad oberoende vilket medium man använder.
 			</p>
-		<img src="../img/content-water.jpg">
+		<img src="../img/content-water.jpg" alt="shapes with water">
 	</section>
 	<footer>
 		<h2>Adress</h2>
