--- a/views/projects.html
+++ b/views/projects.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
 	<link rel="stylesheet" type="text/css" href="../css/project.css">
+	<link rel="icon" href="../img/xlnthead.png">
 	<title>XLNT</title>
 </head>
 
