--- a/views/team.html
+++ b/views/team.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
+	<link rel="icon" href="../img/xlnthead.png">
 </head>
 <body>
 	<div class="bg-color">
