bg-color class responsive.html

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -13,6 +13,7 @@
 	<title>XLNT</title>
 </head>
 <body>
+<div class="bg-color">
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
@@ -65,7 +66,7 @@
 		<a href="#"><i class="fa fa-linkedin icon-size"></i></a>
 
 	</footer>
-
+</div>
 	<script src="https://use.fontawesome.com/656255a524.js"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
 </body>
