Added non-working menu for JS disabled

--- a/css/main.css
+++ b/css/main.css
@@ -510,3 +510,12 @@ form {
   padding-top:2rem;
 }
 
+
+.lihidden{
+   display:inline;
+   color:white;
+   padding-right:1rem;
+   float:left;
+   padding-left:1rem;
+}
+
