Projekt sida klar?

--- a/views/projects.html
+++ b/views/projects.html
@@ -54,11 +54,11 @@
 		<div class="orange-page-3"></div>
 		<div class="page-3-flex-container">
 			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
-			<figure class="flex-img"><img src="../img/plantify.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
+			<figure class="flex-img"><img src="../img/plantify.png"><h1 class="project-h1">Plantify</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
 		</div>
 		<div class="page-3-flex-container2">
-			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
-			<figure class="flex-img"><img src="../img/plantify.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
+			<figure class="flex-img"><img src="../img/blind.png"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
+			<figure class="flex-img"><img src="../img/twitch.png"><h1 class="project-h1">Twitch</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
 		</div>
 		<p class="page-3-p">
 			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
