Projekt text fix

--- a/views/projects.html
+++ b/views/projects.html
@@ -54,16 +54,16 @@
 		<div class="orange-page-3"></div>
 		<div class="page-3-flex-container">
 			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
-			<figure class="flex-img"><img src="../img/plantify.png"><h1 class="project-h1">Plantify</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
+			<figure class="flex-img"><img src="../img/plantify.png"><h1 class="project-h1">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
 		</div>
 		<div class="page-3-flex-container2">
-			<figure class="flex-img"><img src="../img/blind.png"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
-			<figure class="flex-img"><img src="../img/twitch.png"><h1 class="project-h1">Twitch</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
+			<figure class="flex-img"><img src="../img/blind.png"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
+			<figure class="flex-img"><img src="../img/twitch.png"><h1 class="project-h1">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
 		</div>
 		<p class="page-3-p">
-			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
+			Vill du bli lika nöjd som våra tidigare kunder ? Kontaka oss nu !
 		</p>
-		<a href="views/projects.html" class="btn-page-3">Beställ nu!</a>
+		<a href="views/projects.html" class="btn-page-3">Kontakta oss!</a>
 	</section>
 	<footer>
 		<h2>Adress</h2>
