--- a/views/projects.html
+++ b/views/projects.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+<div class="bg-color">
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
@@ -63,7 +64,9 @@
 		<p class="page-3-p">
 			Vill du bli lika nöjd som våra tidigare kunder ? Kontaka oss nu !
 		</p>
-		<a href="views/projects.html" class="btn-page-3">Kontakta oss!</a>
+		<div>
+		<a href="../index.html" class="btn-page-3">Kontakta oss!</a>
+		</div>
 	</section>
 	<footer>
 		<h2>Adress</h2>
@@ -78,5 +81,6 @@
 
 	<script src="https://use.fontawesome.com/656255a524.js"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
+</div>
 </body>
 </html>
