--- a/views/projects.html
+++ b/views/projects.html
@@ -65,7 +65,7 @@
 			Vill du bli lika nöjd som våra tidigare kunder ? Kontaka oss nu !
 		</p>
 		<div>
-		<a href="../index.html" class="btn-page-3">Kontakta oss!</a>
+		<a href="../index.html#kontakt" class="btn-page-3">Kontakta oss!</a>
 		</div>
 	</section>
 	<footer>
