removed last line, did not work properly on

--- a/views/projects.html
+++ b/views/projects.html
@@ -62,7 +62,7 @@
 			<figure class="flex-img"><img src="../img/twitch.png"><h1 class="project-h1">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
 		</div>
 		<p class="page-3-p">
-			Vill du bli lika nöjd som våra tidigare kunder ? Kontaka oss nu !
+			Vill du bli lika nöjd som våra tidigare kunder ?
 		</p>
 		<div>
 		<a href="../index.html#kontakt" class="btn-page-3">Kontakta oss!</a>
