--- a/views/projects.html
+++ b/views/projects.html
@@ -61,7 +61,7 @@
 			<figure class="flex-img"><img src="../img/blind.png"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
 			<figure class="flex-img"><img src="../img/twitch.png"><h1 class="project-h1">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
 		</div>
-		<p class="page-3-p">
+		<p id="p-project" class="page-3-p">
 			Vill du bli lika nöjd som våra tidigare kunder ?
 		</p>
 		<div>
