responsive.html desktop altered

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -49,7 +49,7 @@
 		</div>
 	</nav>
 	<section class="responsive page-3">
-		<h1>Responsivt direktiv!</h1>
+		<h1>Responsiv design!</h1>
 		<div></div>
 		<p>
 		     Vi på XLNT Media vet hur viktigt det är att kunna komma åt information över allt, hur som helst med vad som helst. Så när vi skapar webbprojekt så ser vi alltid till att tillgängligheten och användarvänligheten är maximerad oberoende vilket medium man använder.
