--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,6 +81,13 @@
     flex-direction: column;
     align-items: center;
   }
+  .responsive h1 {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 3rem;
+  }
   .responsive div {
     width: 6rem;
     height: 0.2rem;
@@ -91,15 +98,15 @@
   .responsive p {
     font-family: "Roboto";
     font-weight: 300;
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin: 4rem 0 0 0;
     text-align: center;
-    padding: 0 4rem;
+    padding: 0 8rem;
   }
   .responsive img {
-    margin: 2rem 0 0 0;
-    width: 30rem;
-    height: 20rem;
+    margin: 4rem 0 0 0;
+    width: 32rem;
+    height: 22rem;
   }
 }
 
