--- a/scss/responsive-sass.scss
+++ b/scss/responsive-sass.scss
@@ -17,6 +17,18 @@
     font-size: 1rem;
 }
 
+@mixin font-stuff-h1-desktop() {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 2rem;
+}
+
+@mixin font-stuff-p-desktop() {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1.3rem;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -95,6 +107,12 @@
     padding: 35px 0;
     @include flex-center;
 
+ h1 {
+        @include font-stuff-h1-desktop;
+        text-align: center;
+        margin-top: 3rem;
+    }
+
     div {
         width: 6rem;
         height: 0.2rem;
@@ -104,15 +122,15 @@
     }
 
     p {
-        @include font-stuff-p;
+        @include font-stuff-p-desktop;
         margin: 4rem 0 0 0;
         text-align: center;
-        padding: 0 4rem;
+        padding: 0 8rem;
     }
     img {
-        margin: 2rem 0 0 0;
-        width: 30rem;
-        height: 20rem;
+        margin: 4rem 0 0 0;
+        width: 32rem;
+        height: 22rem;
     }
  }
 }
