--- a/views/projects.html
+++ b/views/projects.html
@@ -18,10 +18,10 @@
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
-				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png"></a>
+				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 			</li>
-			<li class="hamburger-position" align="right">
-				<div id="nav-icon" align="right" onclick="buttonpress()">
+			<li class="hamburger-position">
+				<div id="nav-icon" onclick="buttonpress()">
 					<span></span>
 					<span></span>
 					<span></span>
@@ -54,15 +54,15 @@
 		<h1 class="page-3-title-h1">Projekt vi har jobbat på!</h1>
 		<div class="orange-page-3"></div>
 		<div class="page-3-flex-container">
-			<figure class="flex-img"><img src="../img/youtube.png"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever workrd with!"</p></figure>
-			<figure class="flex-img"><img src="../img/plantify.png"><h1 class="project-h1">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
+			<figure class="flex-img"><img src="../img/youtube.png" alt="client-youtube"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever worked with!"</p></figure>
+			<figure class="flex-img"><img src="../img/plantify.png" alt="client-plantify"><h1 class="project-h1">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
 		</div>
 		<div class="page-3-flex-container2">
-			<figure class="flex-img"><img src="../img/blind.png"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
-			<figure class="flex-img"><img src="../img/twitch.png"><h1 class="project-h1">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
+			<figure class="flex-img"><img src="../img/blind.png" alt="client-blind"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
+			<figure class="flex-img"><img src="../img/twitch.png" alt="client-twitch"><h1 class="project-h1">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
 		</div>
 		<p id="p-project" class="page-3-p">
-			Vill du bli lika nöjd som våra tidigare kunder ?
+			Vill du bli lika nöjd som våra tidigare kunder?
 		</p>
 		<div>
 		<a href="../index.html#kontakt" class="btn-page-3">Kontakta oss!</a>
