--- a/views/responsive.html
+++ b/views/responsive.html
@@ -19,8 +19,8 @@
 			<li class="test">
 				<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 			</li>
-			<li class="hamburger-position" align="right">
-				<div id="nav-icon" align="right" onclick="buttonpress()">
+			<li class="hamburger-position">
+				<div id="nav-icon" onclick="buttonpress()">
 					<span></span>
 					<span></span>
 					<span></span>
