--- a/views/team.html
+++ b/views/team.html
@@ -7,16 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" type="text/css" href="../css/navbar.css">
 	<link rel="icon" href="../img/xlnthead.png">
+	<title>XLNT</title>
 </head>
 <body>
 	<div class="bg-color">
 		<nav class="navbar">
 			<ul class="flex-box">
 				<li class="test">
-					<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png"></a>
+					<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 				</li>
-				<li class="hamburger-position" align="right">
-					<div id="nav-icon" align="right" onclick="buttonpress()">
+				<li class="hamburger-position">
+					<div id="nav-icon" onclick="buttonpress()">
 						<span></span>
 						<span></span>
 						<span></span>
@@ -51,25 +52,25 @@
 			<div class="slideshow-container">
 				<div class="mySlides fade">
 
-					<img src="../img/oscar.png" style="width:100%">
+					<img src="../img/oscar.png" style="width:100%" alt="Oscar Gren">
 					<div class="text"></div>
 				</div>
 
 				<div class="mySlides fade">
 
-					<img src="../img/emil.png" style="width:100%">
+					<img src="../img/emil.png" style="width:100%" alt="Emil Fjellström">
 					<div class="text"></div>
 				</div>
 
 				<div class="mySlides fade">
 
-					<img src="../img/eddie.png" style="width:100%">
+					<img src="../img/eddie.png" style="width:100%" alt="Eddie Jostell">
 					<div class="text"></div>
 				</div>
 
 				<div class="mySlides fade">
 
-					<img src="../img/martin.png" style="width:100%">
+					<img src="../img/martin.png" style="width:100%" alt="Martin Blomgren">
 					<div class="text"></div>
 				</div>
 
@@ -88,27 +89,26 @@
 				<ul class="textList">
 					<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
 						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png">
+						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon">
 					</div></li>
 
 					<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 						<h5>Kompetenser</h5>
-						<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/php.png">
+						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/php.png" alt="PHP-icon">
 					</div></li>
 
 					<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/ai.png"><img class="kompIcon" src="../img/icons/ap.png">
+						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/ai.png" alt="Adobe-Illustrator-icon"><img class="kompIcon" src="../img/icons/ap.png" alt="Photoshop-icon">
 					</div></li>
 
 					<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
 						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png"> <img class="kompIcon" src="../img/icons/css.png"> <img class="kompIcon" src="../img/icons/js.png"> <img class="kompIcon" src="../img/icons/vr.png">
+						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/vr.png" alt="VR-icon">
 					</div></li>
 				</ul>
 			</div>
 		</section>
-		
 		<footer>
 			<h2>Adress</h2>
 			<p>Sjumilaskogen 7</p>
@@ -119,6 +119,7 @@
 			<a href="#"><i class="fa fa-linkedin icon-size"></i></a>
 
 		</footer>
+		</div>
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script src="https://use.fontawesome.com/656255a524.js"></script>
 		<script type="text/javascript" src="../js/team.js"></script>
