--- a/views/responsive.html
+++ b/views/responsive.html
@@ -54,7 +54,7 @@
 		<p>
 		     Vi på XLNT Media vet hur viktigt det är att kunna komma åt information över allt, hur som helst med vad som helst. Så när vi skapar webbprojekt så ser vi alltid till att tillgängligheten och användarvänligheten är maximerad oberoende vilket medium man använder.
 			</p>
-		<img src="../img/content-water.jpg" alt="shapes with water">
+		<img src="../img/content-water-final.png" alt="shapes with water">
 	</section>
 	<footer>
 		<h2>Adress</h2>
