removed center tag, centerd orange line in css with id

--- a/views/team.html
+++ b/views/team.html
@@ -48,7 +48,7 @@
 		
 		<section class="team">
 			<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
-			<center><div class="orange-page-1"></div></center><br><br>
+			<div id="teamorange" class="orange-page-1"></div><br><br>
 			<div class="slideshow-container">
 				<div class="mySlides fade">
 
