--- a/css/navbar.css
+++ b/css/navbar.css
@@ -77,6 +77,7 @@
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  touch-callout:none;
   user-select: none;
   vertical-align: middle;
   width: 130px;
@@ -102,6 +103,7 @@
 /*Hamburger*/
 #nav-icon{
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  tap-highlight-color: rgba(0,0,0,0);
   width: 45px;
   height: 45px;
   position: relative;
