--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,7 @@ body{
           align-items: center;
 }
 .page-3-title-h1 {
+  margin: 3rem 0 0 0;
   font-family: "Roboto";
   font-weight: 300;
   font-size: 1.5rem;
@@ -241,6 +242,7 @@ body{
           align-items: center;
 }
 .page-5-title-h1 {
+  margin: 3rem 0 0 0;
   font-family: "Roboto";
   font-weight: 300;
   font-size: 1.5rem;
