--- a/css/main.css
+++ b/css/main.css
@@ -587,3 +587,9 @@ form {
   margin:0 auto;
   margin-top:2rem;
 }
+
+.nojsDIV{
+  text-align: center;
+  margin-top:2rem;
+  background-color:red;
+}
