--- a/views/team.html
+++ b/views/team.html
@@ -16,6 +16,11 @@
 				<li class="test">
 					<a href="../index.html"><img class="logo-img" src="../img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 				</li>
+				<noscript>
+				<ul class="lihidden">
+							<li class="lihidden"><a href="../index.html">Hem</a></li>
+						</ul>
+						</noscript>
 				<li class="hamburger-position">
 					<div id="nav-icon" onclick="buttonpress()">
 						<span></span>
