Lower case letters on icons

--- a/views/team.html
+++ b/views/team.html
@@ -94,22 +94,22 @@
 				<ul class="textList">
 					<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
 						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon">
+						<img class="kompIcon" src="../img/icons/html.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon">
 					</div></li>
 
 					<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 						<h5>Kompetenser</h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/php.png" alt="PHP-icon">
+						<img class="kompIcon" src="../img/icons/html.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/php.png" alt="PHP-icon">
 					</div></li>
 
 					<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/ai.png" alt="Adobe-Illustrator-icon"><img class="kompIcon" src="../img/icons/ap.png" alt="Photoshop-icon">
+						<img class="kompIcon" src="../img/icons/html.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/ai.png" alt="Adobe-Illustrator-icon"><img class="kompIcon" src="../img/icons/ap.png" alt="Photoshop-icon">
 					</div></li>
 
 					<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
 						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/vr.png" alt="VR-icon">
+						<img class="kompIcon" src="../img/icons/html.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/vr.png" alt="VR-icon">
 					</div></li>
 				</ul>
 			</div>
