footer text and icons are all white now

--- a/views/responsive.html
+++ b/views/responsive.html
@@ -66,9 +66,9 @@
 		<p>Sjumilaskogen 7</p>
 		<p>1337 - Stockholm</p>
 		<h2>Följ oss</h2>
-		<a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
-		<a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
-		<a href="#"><i class="fa fa-linkedin icon-size"></i></a>
+				<a href="#"><i class="fa fa-facebook icon-size" aria-hidden="true" style="color:white"></i></a>
+				<a href="#"><i class="fa fa-twitter icon-size" aria-hidden="true" style="color:white"></i></a>
+				<a href="#"><i class="fa fa-linkedin icon-size" style="color:white"></i></a>
 
 	</footer>
 </div>
