--- a/css/footer.css
+++ b/css/footer.css
@@ -19,7 +19,7 @@ footer h2 {
     margin: 1rem 0 0 2rem;
 }
  footer p {
-    color: black;
+    color: white;
     font-family: "Roboto";
     font-weight: 300;
     margin: 1rem 0 0 2rem;
