--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500");
+/*FOOTER START*/
+/*FOOTER END*/
+/*RESPONSIVE START*/
+/*RESPONIVE END*/
 * {
   box-sizing: border-box;
   padding: 0;
