--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,17 +1,4 @@
-@mixin Robo-font() {
-	font-family: "Roboto";
-	font-weight: 300;
-}
-
-@mixin zero-padd-marg() {
-	padding: 0;
-	margin: 0;
-}
-
-@mixin footer-color-margin(){
-  color: white;
-  margin: 1rem 0 0 2rem;
-}
+@import "mixins";
 
 * {
   box-sizing: border-box;
